# SDL_ini

./: .Doxyfile  .gitignore  CMakeLists.txt  LICENSE  README.md  SDL_ini.h  test_SDL_ini.c
.cmake/: FindSDL3.cmake
.github/workflows/: docs.yml  tests.yml
test/: CMakeLists.txt  SDL_ini_test.c
